Add about activity

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,11 @@
     <style name="big_text">
         <item name="android:textSize">32sp</item>
     </style>
+
+    <style name="about_bullseye_text">
+        <item name="android:textAlignment">center</item>
+        <item name="android:lineSpacingExtra">15sp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
 </resources>
